For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


next version - not released yet
===============================
+ Accept loading more than one subtitle file at a time using the "Load subtitle" dialog or drag-and-drop
+ Add advanced settings page
+ Add an arabic translation
+ Ticket #353, Allow to control minimum file duration for remember position feature
+ Ticket #1407/#2425, Add an advanced option to control the number of recent files. Those files are shown
  in the "Recent Files" menu. It is also the files for which a position is potentially saved
+ Ticket #2194, Show drive label when playing DVD
+ Ticket #3393, Allow to disable remember position feature for audio files
+ Ticket #4345, Text subtitles: Add a mode that automatically chooses the rendering target based on the
  subtitle type, ASS/SSA subtitles will be rendered on the video frame while other text subtitles will
  be rendered on the full window
* Text subtitles: Faster subtitle parsing (up to 4 times faster for SSA/ASS subtitles)
* Text subtitles: Much faster subtitle opening in the Subresync bar
* Ticket #2834, Increase limit on subtitles override placement feature.
* Ticket #4428, Improve the clarity of the error message when opening a subtitle file fails
* Updated LAV Filters to v0.62.0.8:
    - Ticket #4539, LAV Video: Fix a crash with DVD subtitles on 64-bit builds when using software decoding
    - Ticket #4639, LAV Splitter: Fix incorrect colors for VobSub tracks in MP4
* Updated Basque, British English, Chinese (simplified), Croatian, Czech, French, Galician, German, Greek,
  Hungarian, Japanese, Malay, Polish, Portuguese (Brazil), Slovak, Spanish, Swedish, Turkish, Ukrainian
  and Vietnamese translations
! "Load subtitle" dialog: Fix the file filters on Windows Vista+
! Ticket #3930, Fix a possible crash with embedded subtitles when the subtitle queue is disabled