@@ -1,6 +1,6 @@
 /*
  * (C) 2003-2006 Gabest
- * (C) 2006-2013 see Authors.txt
+ * (C) 2006-2014 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -33,3 +33,7 @@
 #include "BaseClasses/streams.h"
 #include <dvdmedia.h>
 #include "../DSUtil/DSUtil.h"
+
+#include <algorithm>
+#include <mutex>
+#include <condition_variable>
