@@ -13,6 +13,8 @@ next version - not released yet
 + Accept loading more than one subtitle file at a time using the "Load subtitle" dialog or drag-and-drop
 + Add advanced settings page
 + Add an arabic translation
++ Completely reworked subtitle queue. The queue should be a bit faster than the older one for a similar number
+  of buffered subpictures. It should also work much better when the number of subpictures becomes important
 + Ticket #353, Allow to control minimum file duration for remember position feature
 + Ticket #1407/#2425, Add an advanced option to control the number of recent files. Those files are shown
   in the "Recent Files" menu. It is also the files for which a position is potentially saved
